# ulys-demodocus

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/instances/: 00-s3-infrastructure.md  01-models.md  02-deployment-manager.md  03-audio-extractor.md  04-transcription-service.md  05-time-alignment.md  06-speaker-resolution.md  07-transcript-merger.md  08-semantic-analyzer.md  09-search-index.md  10-timeline-visualizer.md  11-report-generator.md  12-pipeline.md  13-cli.md  wave1-foundation.md  wave2-transcription.md  wave3-analysis.md  wave4-output.md
deployments/: index.json  people.json
deployments/deploy_20250119_vinci_01/: deployment.json
deployments/deploy_20250119_vinci_01/outputs/: deployment_report.md
deployments/deploy_20260116_argos_los_angeles_01/: deployment.json
schemas/: deployment.schema.json
src/gram_deploy/: __init__.py  __main__.py  config.py
src/gram_deploy/models/: __init__.py  action_item.py  base.py  canonical_utterance.py  deployment.py  event.py  insight.py  person.py  source.py  speaker_mapping.py  timeline.py  transcript.py
src/gram_deploy/services/: __init__.py  audio_extractor.py  deployment_manager.py  pipeline.py  report_generator.py  search_index.py  (+6 more)
tests/: __init__.py  test_audio_extractor.py  test_cli.py  test_deployment_manager.py  test_models.py  test_pipeline.py  test_report_generator.py  test_search_index.py  test_semantic_analyzer.py  test_speaker_resolution.py  test_time_alignment.py  test_timeline_visualizer.py  test_transcript_merger.py  test_transcription_service.py
(+14 files in other folders)
